# usbaudio

./: .clang-format  .gitignore  CMakeLists.txt  README.md  UsbDevice.cpp  UsbDevice.h  UsbException.cpp  UsbException.h  libusbwrapper.h  main.cpp  readme.md
